deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: batuc-trainer-service
spec:
  selector:
    app: batuc-trainer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
